<resources>

    <string name="app_name">QWERTYLed</string>
    <string name="start">Start service</string>
    <string name="stop">Stop service</string>
    <string name="qwertyled_service_started">service started</string>
    <string name="title_activity_about">About</string>
    <string name="version_text">version:</string>
    <string name="credits_text">Contact me:</string>
    <string name="vk_description">VK</string>
    <string name="skype_description">Skype</string>
    <string name="gmail_description">GMail</string>
    <string name="icq_description">ICQ</string>
    <string name="twitter_description">Twitter</string>
    <string name="xda_description">XDA forum</string>
    <string name="gplus_description">Google +</string>
    <string name="app_thread_text">"app thread"</string>
    <string name="about_button">About</string>
    <string name="xda_url">http://forum.xda-developers.com/showthread.php?t=1780319</string>
    <string name="my_name">Kirill Ivanov (nonamerz)</string>
    <string name="menu_settings">Settings</string>
    <string name="process_name">:lcservice</string>
    <string name="vk_url">http://vk.com/na.marse.klaassno</string>
    <string name="twitter_url">http://twitter.com/nonamerzzzzzz</string>
    <string name="icq_url">http://www.icq.com/people/599199517</string>
    <string name="gmail_url">mailto:nonamerzzzzzz@gmail.com</string>
    <string name="gplus_url">http://gplus.to/nonamerz</string>
    <string name="skype_url">skype:nonamerzzzzzz?chat</string>
    
</resources>