<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="34dp" >

        <TextView
            android:id="@+id/credits_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/credits_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/credits_btns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credits_text"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <ImageButton
                    android:id="@+id/gmail_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/gmail_description"
                    android:src="@drawable/gmail_icon" />

                <ImageButton
                    android:id="@+id/gplus_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:contentDescription="@string/gplus_description"
                    android:src="@drawable/gplus_icon" />

                <ImageButton
                    android:id="@+id/vk_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:contentDescription="@string/vk_description"
                    android:src="@drawable/vk_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/icq_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:contentDescription="@string/icq_description"
                    android:src="@drawable/icq_icon" />

                <ImageButton
                    android:id="@+id/skype_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:contentDescription="@string/skype_description"
                    android:src="@drawable/skype_icon" />

                <ImageButton
                    android:id="@+id/twitter_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:contentDescription="@string/twitter_description"
                    android:src="@drawable/twitter_icon" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textSize="35sp" />

            <LinearLayout
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_text" />

                <TextView
                    android:id="@+id/version_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/xda_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="26dp"
            android:background="@null"
            android:contentDescription="@string/xda_description"
            android:src="@drawable/xda_icon" />
    </LinearLayout>

</RelativeLayout>
